Update body with flex properties

--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Mondrian Project</title>
     <style>
       /* Piet Mondrian: Composition No III, with Red, Blue, Yellow, & Black */
+
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        padding: 0;
+      }
+      
       .container {
         background-color: black;
         width: 748px;
